2013-09-24  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_html.php,
	  include/js/integria.js: Fixed the autorefresh button.
	
	* operation/contacts/contact_detail.php,
	  operation/leads/lead_detail.php: Ordered the company combo.
	
	* operation/invoices/invoice_detail.php,
	  operation/invoices/invoice_view.php,
	  operation/workorders/wo.php: ACL improvements and fixes.
	
2013-09-24  Dario Rodriguez <dario@artica.es>

	* include/functions_api.php: Added support to set campaign
	id on lead creation.
	
2013-09-24  Dario Rodriguez <dario@artica.es>

	* include/functions_crm.php,
	operation/campaign/campaign_list.php,
	operation/campaign/campaign_stats.php,
	operation/campaign/campaign_editor.php,
	integria_db.sql,
	extras/migrate.sql: Fixed several issues with campaigns and 
	created statistics view. Also added "expenses" field.
	* operation/newsletter/issue_definition.php: Encapsuled code 
	in a function.
	
2013-09-24  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/incidents/incident_search_logic.php,
	  include/functions_html.php,
	  include/js/integria.js, : Fixed the incident autorefresh.
	
	* operation/invoices/invoices.php: Fixed an error on the
	invoice creation.
	
2013-09-23  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_html.php: Fixed the function
	"print_autorefresh_button".
	
	* include/ajax/autorefresh.php: Deleted file.
	
	* include/js/integria.js: Fixed some functions. Added the
	functions "createCookie", "readCookie" and "eraseCookie".

	* extras/migrate.sql: Fixed the date of the last update.
	
2013-09-23  Dario Rodriguez <dario@artica.es>
	
	*  operation/leads/lead_statistics.php: Removed
	debug trace.

2013-09-23  Dario Rodriguez <dario@artica.es>

	* operation/campaign,
	operation/campaign/campaign_list.php,
	operation/campaign/campaign_stats.php,
	operation/campaign/campaign.php,
	operation/campaign/track_newsletter.php,